2000-05-28  Dave Cole <dave@dccs.com.au>

	* client/client.c (mode_start): Goto mode_offline after
	sm_pop_all(), prevents stack underflow.
	
2000-05-28  Bibek Sahu <scorpio@dodds.net>
	* client/Makefile.am client/gui.c client/gui.h client/admin-gtk.c
	server/gnocatan-server.c: Added a basic network administration 
	interface (stole the interface from the gtk server).  Needs work.

2000-05-27  Steve Langasek <vorlon@dodds.net>

	* common/map.c, server/server.c: Converted common/map.c to use the
	Mersenne Twister PRNG; further tweaks in g_rand() (non)support.

	* server/mt_rand.[ch], server/Makefile.am, common/mt_rand.[ch],
	common/Makefile.am: Moved Mersenne Twister to the common/ subdir,
	as it's needed elsewhere.

2000-05-27  Andy Heroff <aheroff@mediaone.net>

	* client/gui.c: Added total functionality to what is in the settings
	  dialog. What's there works. More settings will be added as needed.

	* server/.cvsignore: Readded gnocatan-server to the ignore list for
	  now for those with dirty build directories. Will remove later.

2000-05-27  Bibek Sahu <scorpio@dodds.net>

	* server/gnocatan-server.c: added a little debugging output.  Will
	be useful soon for network configuration.

	* server/Makefile.am, server/gnocatan-server.c,
	server/gnocatan-server.h, server/gnocatan-server-gtk.c,
	server/gnocatan-server-console.c: Made as much code as possible
	common between the two servers.  Added rudimentary network
	administration functions.

	* server/server.c: separated networking code from player connection
	code so I could use it elsewhere w/o having to rewrite it.

	* server/Makefile.am: removed line where console server was being
	linked against common gtk code.

2000-05-27  Steve Langasek <vorlon@dodds.net>

	* server/server.c, server/mt_rand.[ch], server/Makefile.am,
	configure.in: Switched to using the Mersenne Twister for our
	PRNG; should give better dice rolls.

2000-05-25  Steve Langasek <vorlon@dodds.net>
