@@ -18,8 +18,8 @@ GNOME_INIT
 GNOME_COMPILE_WARNINGS
 AM_PATH_GLIB
 
-AC_TRY_LINK_FUNC(g_rand_new,
-	[AC_DEFINE(HAVE_G_RAND_NEW)],
+AC_TRY_LINK_FUNC(g_rand_new_with_seed,
+	[AC_DEFINE(HAVE_G_RAND_NEW_WITH_SEED)],
 	[MT_RAND_OBJ="mt_rand.o"]
 )
 AC_CHECK_HEADERS(getopt.h)
