@@ -1,3 +1,8 @@
+2000-05-30  Steve Langasek <vorlon@dodds.net>
+
+	* acconfig.h, configure.in, common/map.[ch], server/server.c:
+	Added support for new glib g_rand functions.  Untested.
+
 2000-05-28  Dave Cole <dave@dccs.com.au>
 
 	* client/client.c (mode_start): Goto mode_offline after
